--- a/html/abstract.html
+++ b/html/abstract.html
@@ -10,7 +10,8 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/scroll.css" />
+    <title>Abstract</title>
   </head>
   <body>
     <div
