--- a/html/agp.html
+++ b/html/agp.html
@@ -10,7 +10,8 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <title>Document</title>
+    <link rel="stylesheet" href="../css/scroll.css" />
+    <title>Department</title>
   </head>
   <body>
     <div class="bg-[url('../assets/agp.jpg')] bg-cover max-w-screen h-[95vh]">
