--- a/html/agp.html
+++ b/html/agp.html
@@ -25,7 +25,8 @@
               class="h-8"
               alt="Flowbite Logo"
             />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap"
+            <span
+              class="self-center text-white text-2xl font-semibold whitespace-nowrap"
               >ETES-2024</span
             >
           </a>
@@ -347,7 +348,7 @@
                     agp@iitism.ac.in
                   </p>
                 </li>
-                <li class="relative flex justify-center">
+                <li class="relative flex justify-start">
                   <ion-icon
                     name="call"
                     class="absolute left-0 bottom-0 text-white"
