--- a/html/committee.html
+++ b/html/committee.html
@@ -27,7 +27,8 @@
               class="h-8"
               alt="Flowbite Logo"
             />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap"
+            <span
+              class="self-center text-white text-2xl font-semibold whitespace-nowrap"
               >ETES-2024</span
             >
           </a>
@@ -155,14 +156,14 @@
           </div>
         </div>
       </nav>
-      <div class="w-[95vw] h-[50vh] mt-[20vh] pl-10 items-center">
+      <div class="w-[95vw] mt-[5vh] flex justify-center pl-10 items-center">
         <div
-          class="text-5xl px-5 py-5 -mt-5 justify-center items-center leading-20 font-semibold text-white rounded backdrop-blur-md bg-opacity-40"
+          class="px-5 py-5 justify-center items-center leading-20 font-semibold text-white rounded backdrop-blur-md bg-opacity-40"
         >
           <p class="text-2xl my-5 flex justify-center underline">
             National Conference
           </p>
-          <p class="my-5">
+          <p class="my-5 text-3xl sm:text-5xl">
             Emerging Trend in <span class="text-green-700">Earth Sciences:</span
             ><br />Geohazards and Resource Management
           </p>
@@ -181,7 +182,7 @@
       </div>
     </div>
     <div class="my-10 mx-10">
-      <div class="grid grid-cols-1 sm:grid-cols-2 gap-5">
+      <div class="grid grid-cols-1 md:grid-cols-2 gap-5">
         <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
           <div class="p-5">
             <a href="#">
@@ -230,20 +231,13 @@
           </div>
         </div>
       </div>
-      <div class="my-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+      <div class="my-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
         <h1
-          class="col-span-4 mb-10 text-3xl text-[#6F8F72] font-semibold flex justify-center items-center"
+          class="col-span-full mb-10 text-3xl text-[#6F8F72] font-semibold flex justify-center items-center"
         >
           Organizing Committee
         </h1>
         <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-          <a href="#">
-            <img
-              class="rounded-t-lg"
-              src="/docs/images/blog/image-1.jpg"
-              alt=""
-            />
-          </a>
           <div class="p-5">
             <a href="#">
               <h5
@@ -461,7 +455,7 @@
       </div>
       <div class="my-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
         <h1
-          class="col-span-4 mb-10 text-3xl text-[#6F8F72] font-semibold flex justify-center items-center"
+          class="col-span-full mb-10 text-3xl text-[#6F8F72] font-semibold flex justify-center items-center"
         >
           Core Committee
         </h1>
@@ -884,7 +878,7 @@
       </div>
       <div class="my-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
         <h1
-          class="col-span-4 mb-10 text-3xl text-[#6F8F72] font-semibold flex justify-center items-center"
+          class="col-span-full mb-10 text-3xl text-[#6F8F72] font-semibold flex justify-center items-center"
         >
           Advisory Committee
         </h1>
@@ -1536,7 +1530,7 @@
                 Contact Us
               </h2>
               <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                <li class="mb-4 relative flex justify-center">
+                <li class="mb-4 relative flex justify-start">
                   <ion-icon
                     class="absolute left-0 bottom-0 text-white"
                     name="mail"
@@ -1544,7 +1538,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    agp@iitism.ac.in
+                    etes2024@iitism.ac.in
                   </p>
                 </li>
                 <li class="relative flex justify-center">
