--- a/html/homepage.html
+++ b/html/homepage.html
@@ -27,7 +27,8 @@
               class="h-8"
               alt="Flowbite Logo"
             />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap"
+            <span
+              class="self-center text-white text-2xl font-semibold whitespace-nowrap"
               >ETES-2024</span
             >
           </a>
@@ -155,14 +156,14 @@
           </div>
         </div>
       </nav>
-      <div class="w-[95vw] h-[50vh] mt-[20vh] pl-10 items-center">
+      <div class="w-[95vw] mt-[5vh] flex justify-center pl-10 items-center">
         <div
-          class="text-5xl px-5 py-5 justify-center items-center leading-20 font-semibold text-white rounded backdrop-blur-md bg-opacity-40"
+          class="px-5 py-5 justify-center items-center leading-20 font-semibold text-white rounded backdrop-blur-md bg-opacity-40"
         >
           <p class="text-2xl my-5 flex justify-center underline">
             National Conference
           </p>
-          <p class="my-5">
+          <p class="my-5 text-3xl sm:text-5xl">
             Emerging Trend in <span class="text-green-700">Earth Sciences:</span
             ><br />Geohazards and Resource Management
           </p>
@@ -360,7 +361,7 @@
                 Contact Us
               </h2>
               <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                <li class="mb-4 relative flex justify-center">
+                <li class="mb-4 relative flex justify-start">
                   <ion-icon
                     class="absolute left-0 bottom-0 text-white"
                     name="mail"
@@ -368,7 +369,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    agp@iitism.ac.in
+                    etes2024@iitism.ac.in
                   </p>
                 </li>
                 <li class="relative flex justify-center">
