--- a/html/iitism.html
+++ b/html/iitism.html
@@ -27,7 +27,8 @@
               class="h-8"
               alt="Flowbite Logo"
             />
-            <span class="self-center text-2xl font-semibold whitespace-nowrap"
+            <span
+              class="self-center text-white text-2xl font-semibold whitespace-nowrap"
               >ETES-2024</span
             >
           </a>
@@ -159,7 +160,7 @@
         class="w-[95vw] h-[50vh] mt-[20vh] pl-10 flex justify-center items-center"
       >
         <p
-          class="text-5xl w-[70vw] px-5 py-10 flex justify-center font-semibold text-white rounded-3xl backdrop-blur-md bg-opacity-40"
+          class="text-4xl sm:text-5xl w-[70vw] px-5 py-10 flex justify-center font-semibold text-white rounded-3xl backdrop-blur-md bg-opacity-40"
         >
           Indian Institute of Technology (Indian School of Mines), Dhanbad
         </p>
@@ -374,10 +375,10 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    agp@iitism.ac.in
+                    etes2024@iitism.ac.in
                   </p>
                 </li>
-                <li class="relative flex justify-center">
+                <li class="relative flex justify-start">
                   <ion-icon
                     name="call"
                     class="absolute left-0 bottom-0 text-white"
