--- a/html/committee.html
+++ b/html/committee.html
@@ -23,8 +23,8 @@
         >
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img
-              src="https://flowbite.com/docs/images/logo.svg"
-              class="h-8"
+              src="../assets/Logo-removebg.png"
+              class="h-12"
               alt="Flowbite Logo"
             />
             <span
@@ -1514,9 +1514,9 @@
           <div class="mb-6 md:mb-0">
             <a href="https://flowbite.com/" class="flex items-center">
               <img
-                src="https://flowbite.com/docs/images/logo.svg"
-                class="h-8 me-3"
-                alt="FlowBite Logo"
+                src="../assets/Logo-removebg.png"
+                class="h-10"
+                alt="ETES Logo"
               />
               <span
                 class="self-center text-2xl font-semibold whitespace-nowrap text-white"
