--- a/html/homepage.html
+++ b/html/homepage.html
@@ -23,9 +23,9 @@
         >
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
             <img
-              src="https://flowbite.com/docs/images/logo.svg"
-              class="h-8"
-              alt="Flowbite Logo"
+              src="../assets/Logo-removebg.png"
+              class="h-12"
+              alt="ETES Logo"
             />
             <span
               class="self-center text-white text-2xl font-semibold whitespace-nowrap"
@@ -265,10 +265,18 @@
         engage with the latest developments in geophysics, encompassing
         everything from fundamental advancements in methodologies to capturing
         case studies. We look forward to your participation and the exciting
-        exchange of ideas and knowledge during this event.
+        exchange of ideas and knowledge during this event.Kindly download the
+        <a
+          class="underline font-semibold"
+          href="https://res.cloudinary.com/dfr1kvie3/raw/upload/v1703057304/Abstract_template_cknfxk.docx"
+          download="Abstract_Template"
+          >template of the abstract</a
+        >.
       </p>
       <p class="flex justify-center">
         <a
+          href="https://docs.google.com/forms/d/1K0AX2QvHLNcOZ63hJ0Q9RDOdfwfuj9f3QkhpgfhEO-I/edit"
+          target="_blank"
           type="button"
           class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
         >
@@ -345,9 +353,9 @@
           <div class="mb-6 md:mb-0">
             <a href="https://flowbite.com/" class="flex items-center">
               <img
-                src="https://flowbite.com/docs/images/logo.svg"
-                class="h-8 me-3"
-                alt="FlowBite Logo"
+                src="../assets/Logo-removebg.png"
+                class="h-10"
+                alt="ETES Logo"
               />
               <span
                 class="self-center text-2xl font-semibold whitespace-nowrap text-white"
