Contact Us updated

--- a/html/contact.html
+++ b/html/contact.html
@@ -35,7 +35,7 @@
           <button
             data-collapse-toggle="navbar-dropdown"
             type="button"
-            class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
+            class="inline-flex items-center p-2 w-15 h-15 justify-center text-sm text-gray-900 rounded-lg bg-opacity-40 backdrop-blur-xl md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
             aria-controls="navbar-dropdown"
             aria-expanded="false"
           >
@@ -202,7 +202,19 @@
         Phone : +91-326-2235949 ; M: +91-9471191852
       </h1>
       <h1 class="text-3xl font-bold flex justify-center items-center my-5">
-        Email : etes2024@iitism.ac.in
+        Email : etes2024@iitism.ac.in, agp@iitism.ac.in
+      </h1>
+      <h1 class="text-2xl font-bold flex justify-center items-center mt-15">
+        Treasurer - Dr. Partha Pratim Mandal
+      </h1>
+      <h1 class="text-2xl font-bold flex justify-center items-center mb-10">
+        M:+91-8879331804
+      </h1>
+      <h1 class="text-2xl font-bold flex justify-center items-center mt-15">
+        Organizing Secretary - Dr. Niptika Jana
+      </h1>
+      <h1 class="text-2xl font-bold flex justify-center items-center">
+        M:+91-9903080428
       </h1>
 
       <div class="relative overflow-x-auto shadow-xl sm:rounded-lg"></div>
