added template tab

--- a/html/homepage.html
+++ b/html/homepage.html
@@ -275,7 +275,7 @@
       </p>
       <p class="flex justify-center">
         <a
-          href="https://docs.google.com/forms/d/1K0AX2QvHLNcOZ63hJ0Q9RDOdfwfuj9f3QkhpgfhEO-I/edit"
+          href="template.html"
           target="_blank"
           type="button"
           class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
