--- a/html/template.html
+++ b/html/template.html
@@ -11,11 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="../css/scroll.css" />
-    <title>Abstract</title>
+    <title>Department</title>
   </head>
   <body>
     <div
-      class="bg-[url('../assets/nature2.jpg')] bg-cover max-w-screen h-[95vh]"
+      class="bg-[url('../assets/nature5.jpg')] bg-cover max-w-screen h-[95vh]"
     >
       <nav class="bg-transparent border-gray-200">
         <div
@@ -63,93 +63,9 @@
               <li>
                 <a
                   href="homepage.html"
-                  class="block py-2 px-3 text-white font-normal bg-transparent rounded md:bg-transparent md:text-white md:p-0"
+                  class="block py-2 px-3 text-white text-xl font-semibold bg-transparent rounded md:bg-transparent md:text-white md:p-0"
                   aria-current="page"
                   >Home</a
-                >
-              </li>
-              <li>
-                <button
-                  id="dropdownNavbarLink"
-                  data-dropdown-toggle="dropdownNavbar"
-                  class="flex items-center justify-between font-normal w-full py-2 px-3 text-white rounded hover:bg-transparent md:hover:bg-transparent md:border-0 md:hover:text-white md:p-0 md:w-auto"
-                >
-                  About
-                  <svg
-                    class="w-2.5 h-2.5 ms-2.5"
-                    aria-hidden="true"
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 10 6"
-                  >
-                    <path
-                      stroke="currentColor"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      stroke-width="2"
-                      d="m1 1 4 4 4-4"
-                    />
-                  </svg>
-                </button>
-                <!-- Dropdown menu -->
-                <div
-                  id="dropdownNavbar"
-                  class="z-10 hidden backdrop-blur-md bg-opacity-60 font-normal bg-transparent divide-y divide-gray-100 rounded-lg shadow w-44"
-                >
-                  <ul
-                    class="py-2 text-sm text-white bg-transparent"
-                    aria-labelledby="dropdownLargeButton"
-                  >
-                    <li>
-                      <a
-                        href="agp.html"
-                        class="block px-2 mx-2 py-2 rounded-lg font-normal hover:bg-[#6F8F72]"
-                        >Our Department</a
-                      >
-                    </li>
-                    <li>
-                      <a
-                        href="iitism.html"
-                        class="block px-2 mx-2 py-2 rounded-lg font-normal hover:bg-[#6F8F72]"
-                        >IIT ISM, Dhanbad</a
-                      >
-                    </li>
-                  </ul>
-                </div>
-              </li>
-              <li>
-                <a
-                  href="committee.html"
-                  class="block py-2 px-3 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-[#6F8F72] md:p-0"
-                  >Committee</a
-                >
-              </li>
-              <li>
-                <a
-                  href="abstract.html"
-                  class="block py-2 px-3 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-[#6F8F72] md:p-0"
-                  >Your Abstract</a
-                >
-              </li>
-              <li>
-                <a
-                  href="fees.html"
-                  class="block py-2 px-3 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-[#6F8F72] md:p-0"
-                  >Registration</a
-                >
-              </li>
-              <li>
-                <a
-                  href="sponsor.html"
-                  class="block py-2 px-3 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-[#6F8F72] md:p-0"
-                  >Sponsorship</a
-                >
-              </li>
-              <li>
-                <a
-                  href="contact.html"
-                  class="block py-2 px-3 font-normal text-white rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-[#6F8F72] md:p-0"
-                  >Contact Us</a
                 >
               </li>
             </ul>
@@ -182,127 +98,38 @@
       </div>
     </div>
     <div class="my-10 mx-10 text-[#6F8F72]">
-      <h1 class="text-3xl font-bold my-15">
-        Invitation for Abstract Submision
+      <h1 class="text-4xl font-bold my-15 flex justify-center">
+        Template of Abstract
       </h1>
-      <p class="my-10 leading-6">
-        You are cordially invited to contribute an abstract to the upcoming
-        Emerging Trends in Earth Sciences(ETES)-2024 conference at the
-        Department of Geophysics, IIT ISM, Dhanbad, from March 15 to 17,
-        2024.Kindly download the
-        <a
-          class="underline font-semibold"
-          href="https://res.cloudinary.com/dfr1kvie3/raw/upload/v1703057304/Abstract_template_cknfxk.docx"
-          download="Abstract_Template"
-          >template of the abstract</a
-        >.
-      </p>
-      <p class="flex justify-center">
-        <a
-          href="template.html"
-          target="_blank"
-          type="button"
-          class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
-        >
-          Submit your Abstract
-        </a>
-      </p>
-    </div>
-    <div class="mx-10">
-      <h1
-        class="text-3xl text-[#6F8F72] font-bold my-5 py-10 flex justify-content items-center text-center"
-      >
-        Timeline
-      </h1>
-      <div class="mx-4 bg-lime-500 text-white rounded-xl px-10 py-5">
-        <ol class="relative border-s border-gray-200">
-          <li class="mb-10 ms-4">
-            <div
-              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
-            ></div>
-            <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >31 January 2024</time
+      <div class="my-10 leading-6">
+        <p class="my-5 text-xl font-bold">
+          Title of the Paper (Times New Roman, Bold, 14 point)
+        </p>
+        <p class="my-5 text-lg font-normal">First Author-1, Second Author-2, Third Author-3 <span class="text-sm">(Corresponding Author name, Email)</span></p>
+        <p class="my-5 text-lg font-normal flex-col">
+            <p>Affiliation of First Author</p>
+            <p>Affiliation of Second Author</p>
+            <p>Affiliation of Third Author</p>
+        </p>
+        <p class="my-5 text-xl font-bold">
+            Mention Abstract Theme (As mentioned on the conference website)
+        </p>
+        <p class="mt-5 mb-2 text-xl font-bold">
+            Abstract
+        </p>
+        The abstract should be 200-250 words single paragraph without subheadings, indentation, or references. The abstract should include the problem statement, a description of the research, methodology adopted, an outline of the results or outcomes, and finally, an ending note of the project’s implications and contributions. An abstract summary figure can be added if required. The page margins should be 30 mm for the top, right, left, and bottom. Title of the paper (style: “Paper Title”, 14 points, bold, centered) single rows, and is followed by 1.5 line spacing, Times New Roman 12 front. Bullets/lists or references are not to be included in the abstract. References could be provided at the end of the abstract and cited in brackets inside the body of the abstract. For numerical quantities, SI units are recommended with notations involving appropriate exponent for ex. (e.g. kg m-3). After submission, the abstracts will be peer-reviewed, and acceptance will be intimated in due course. 
+        <p class="my-5"> <span class="text-xl font-bold">Keywords:</span> At least four keywords separated by semi colon (;)</p>
+        <p class="flex justify-center my-10">
+            <a
+              href="https://docs.google.com/forms/d/1K0AX2QvHLNcOZ63hJ0Q9RDOdfwfuj9f3QkhpgfhEO-I/edit"
+              target="_blank"
+              type="button"
+              class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
             >
-            <h3 class="text-lg font-semibold">
-              Last date of abstract submission
-            </h3>
-          </li>
-          <li class="mb-10 ms-4">
-            <div
-              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
-            ></div>
-            <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >05 February 2024</time
-            >
-            <h3 class="text-lg font-semibold">
-              Last date for early bird registration
-            </h3>
-          </li>
-          <li class="mb-10 ms-4">
-            <div
-              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
-            ></div>
-            <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >12 February 2024</time
-            >
-            <h3 class="text-lg font-semibold">Acceptance of abstract</h3>
-          </li>
-          <li class="mb-10 ms-4">
-            <div
-              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
-            ></div>
-            <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >08 March 2024</time
-            >
-            <h3 class="text-lg font-semibold">
-              Last date of late registration
-            </h3>
-          </li>
-          <li class="mb-10 ms-4">
-            <div
-              class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
-            ></div>
-            <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >15-17 March 2024</time
-            >
-            <h3 class="text-lg font-semibold">Conference</h3>
-          </li>
-        </ol>
+              Submit your Abstract
+            </a>
+          </p>
       </div>
-    </div>
-    <div class="my-10 mx-4 bg-lime-500 text-white rounded">
-      <h1
-        class="text-3xl py-10 flex justify-center items-center font-bold mt-5 mb-2"
-      >
-        Themes for Abstract Submission
-      </h1>
-      <ul class="mx-10 py-5 pb-10 rounded divide-y">
-        <li class="px-2 py-2">
-          Geology and geodynamics of the eastern Himalayas and foreland basins
-        </li>
-        <li class="px-2 py-2">
-          Physics of Earth's interior and planetary system
-        </li>
-        <li class="px-2 py-2">Advances in near-surface exploration</li>
-        <li class="px-2 py-2">
-          Mine safety and geoscientific challenges of the mining industry
-        </li>
-        <li class="px-2 py-2">
-          Emerging trends in ground water resource management
-        </li>
-        <li class="px-2 py-2">Climate change and atmospheric sciences</li>
-        <li class="px-2 py-2">Continental margins and ocean basins</li>
-        <li class="px-2 py-2">
-          Geological hazards: risk assessment and mitigation
-        </li>
-        <li class="px-2 py-2">
-          Energy security & storage and carbon sequestration
-        </li>
-        <li class="px-2 py-2">AI/ML applications in geosciences</li>
-        <li class="px-2 py-2">
-          Geoscientific techniques in delineating archeological heritages
-        </li>
-      </ul>
     </div>
     <footer class="bg-lime-500">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
@@ -326,7 +153,7 @@
                 Contact Us
               </h2>
               <ul class="text-gray-500 dark:text-gray-400 font-medium">
-                <li class="mb-4 relative flex justify-start">
+                <li class="mb-4 relative flex justify-center">
                   <ion-icon
                     class="absolute left-0 bottom-0 text-white"
                     name="mail"
@@ -334,10 +161,10 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    etes2024@iitism.ac.in
+                    agp@iitism.ac.in
                   </p>
                 </li>
-                <li class="relative flex justify-center">
+                <li class="relative flex justify-start">
                   <ion-icon
                     name="call"
                     class="absolute left-0 bottom-0 text-white"
