G form for registration

--- a/html/register.html
+++ b/html/register.html
@@ -11,11 +11,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="stylesheet" href="../css/scroll.css" />
-    <title>Registration</title>
+    <title>Register</title>
   </head>
   <body>
     <div
-      class="bg-[url('../assets/nature1.jpg')] bg-cover max-w-screen h-[95vh]"
+      class="bg-[url('../assets/nature2.jpg')] bg-cover max-w-screen h-[95vh]"
     >
       <nav class="bg-transparent border-gray-200">
         <div
@@ -180,142 +180,49 @@
           </button>
         </div>
       </div>
-      <div class="w-[95vw] h-[50vh] mt-[20vh] pl-10 items-center">
-        <p
-          class="text-6xl w-[70vw] px-5 justify-center font-semibold text-white rounded-xl backdrop-blur-md bg-opacity-40"
-        ></p>
-      </div>
     </div>
     <div class="my-10 mx-10 text-[#6F8F72]">
-      <h1 class="text-3xl font-bold my-15">Fee Payment for ETES-2024</h1>
+      <h1 class="text-3xl font-bold my-15">Register for ETES 2024</h1>
       <p class="my-10 leading-6">
-        You are cordially invited to contribute an abstract to the upcoming
-        Emerging Trends in Earth Sciences(ETES)-2024 conference at the
-        Department of Geophysics, IIT ISM, Dhanbad, from March 15 to 17, 2024.
+        Kindly follow the steps given in the attached document to successfully
+        register for ETES 2024.
       </p>
-
-      <div class="relative overflow-x-auto shadow-xl sm:rounded-lg">
-        <table class="w-full text-base text-left rtl:text-right text-gray-500">
-          <thead class="text-xs text-gray-700 uppercase">
-            <tr>
-              <th scope="col" class="px-6 py-3 bg-gray-50 text-[#6F8F72]">
-                Delegate
-              </th>
-              <th scope="col" class="px-6 py-3">
-                Early Bird Rates (01 delegate)<br />
-                <span class="text-sm">(Till 5th February, 2024) </span>
-              </th>
-              <th scope="col" class="px-6 py-3 bg-gray-50 text-[#6F8F72]">
-                Standard Rates (01 delegate)<br />
-                <span class="text-sm">(After 5th February, 2024) </span>
-              </th>
-              <th scope="col" class="px-6 py-3"></th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr class="border-b border-gray-200">
-              <th
-                scope="row"
-                class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50"
-              >
-                Participants from Industry
-              </th>
-              <td class="px-6 py-4">10000/-</td>
-              <td class="px-6 py-4 bg-gray-50">12000/-</td>
-              <td class="px-6 py-4">
-                <a
-                  type="button"
-                  href="./register.html"
-                  target="_blank"
-                  class="text-lime-500 hover:text-white border border-lime-500 hover:bg-lime-600 focus:ring-4 focus:outline-none focus:ring-lime-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-                >
-                  Pay
-                </a>
-              </td>
-            </tr>
-            <tr class="border-b border-gray-200">
-              <th
-                scope="row"
-                class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50"
-              >
-                Researcher / Scientist Faculty
-              </th>
-              <td class="px-6 py-4">6000/-</td>
-              <td class="px-6 py-4 bg-gray-50">7000/-</td>
-              <td class="px-6 py-4">
-                <a
-                  type="button"
-                  href="./register.html"
-                  target="_blank"
-                  class="text-lime-500 hover:text-white border border-lime-500 hover:bg-lime-600 focus:ring-4 focus:outline-none focus:ring-lime-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-                >
-                  Pay
-                </a>
-              </td>
-            </tr>
-            <tr class="border-b border-gray-200">
-              <th
-                scope="row"
-                class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50"
-              >
-                Research Scholar / PDF/Project Fellow
-              </th>
-              <td class="px-6 py-4">3500/-</td>
-              <td class="px-6 py-4 bg-gray-50">4000/-</td>
-              <td class="px-6 py-4">
-                <a
-                  type="button"
-                  href="./register.html"
-                  target="_blank"
-                  class="text-lime-500 hover:text-white border border-lime-500 hover:bg-lime-600 focus:ring-4 focus:outline-none focus:ring-lime-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-                >
-                  Pay
-                </a>
-              </td>
-            </tr>
-            <tr class="border-b border-gray-200">
-              <th
-                scope="row"
-                class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50"
-              >
-                Student
-              </th>
-              <td class="px-6 py-4">1500/-</td>
-              <td class="px-6 py-4 bg-gray-50">2000/-</td>
-              <td class="px-6 py-4">
-                <a
-                  type="button"
-                  href="./register.html"
-                  target="_blank"
-                  class="text-lime-500 hover:text-white border border-lime-500 hover:bg-lime-600 focus:ring-4 focus:outline-none focus:ring-lime-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-                >
-                  Pay
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <th
-                scope="row"
-                class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50"
-              >
-                Accompanying person
-              </th>
-              <td class="px-6 py-4">2000/-</td>
-              <td class="px-6 py-4 bg-gray-50">2000/-</td>
-              <td class="px-6 py-4">
-                <a
-                  type="button"
-                  href="./register.html"
-                  target="_blank"
-                  class="text-lime-500 hover:text-white border border-lime-500 hover:bg-lime-600 focus:ring-4 focus:outline-none focus:ring-lime-200 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-                >
-                  Pay
-                </a>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
+      <p class="flex justify-center">
+        <a
+          href="https://res.cloudinary.com/dfr1kvie3/raw/upload/v1706164047/ETES_registration_support_pyoqwl.docx"
+          target="_blank"
+          type="button"
+          class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
+        >
+          Guidelines
+        </a>
+      </p>
+      <p class="flex mt-5 justify-center">
+        <a
+          href="https://eps.eshiksa.net/DirectFeesv3/IIT_Dhanbad/index"
+          target="_blank"
+          type="button"
+          class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
+        >
+          Pay
+        </a>
+      </p>
+    </div>
+    <div class="my-10 mx-10 text-[#6F8F72]">
+      <p class="my-10 leading-6">
+        Fill the form along with proof of payment(screen shot) to ensure
+        registration.
+      </p>
+      <p class="flex justify-center">
+        <a
+          href="https://docs.google.com/forms/d/e/1FAIpQLSfpHZWCSP5WTZRkc2d6w8ErIda2P9lrbbO7sMsoM5BAZY1g-w/viewform?usp=pp_url"
+          target="_blank"
+          type="button"
+          class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
+        >
+          Complete Registration
+        </a>
+      </p>
     </div>
     <footer class="bg-lime-500">
       <div class="mx-auto w-full max-w-screen-xl p-4 py-6 lg:py-8">
