--- a/html/homepage.html
+++ b/html/homepage.html
@@ -21,12 +21,23 @@
         <div
           class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
         >
-          <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img
-              src="../assets/Logo-removebg.png"
-              class="h-12"
-              alt="ETES Logo"
-            />
+          <a
+            href="#"
+            class="flex items-center justify-between gap-x-4 rtl:space-x-reverse"
+          >
+            <div class="flex justify-center items-center">
+              <img
+                src="../assets/makeinindia.png"
+                class="h-5"
+                alt="ETES Logo"
+              />
+              <img
+                src="../assets/Logo-removebg.png"
+                class="h-12"
+                alt="ETES Logo"
+              />
+            </div>
+
             <span
               class="self-center text-white text-2xl font-semibold whitespace-nowrap"
               >ETES-2024</span
