--- a/html/sponsor.html
+++ b/html/sponsor.html
@@ -17,16 +17,23 @@
     <div
       class="bg-[url('../assets/nature5.jpg')] bg-cover max-w-screen h-[95vh]"
     >
-      <nav class="bg-transparent border-gray-200">
+      <nav class="bg-transparent border-gray-200 ">
         <div
           class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
         >
           <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img
-              src="../assets/Logo-removebg.png"
-              class="h-12"
-              alt="Flowbite Logo"
-            />
+            <div class="flex justify-center items-center">
+              <img
+                src="../assets/makeinindia.png"
+                class="h-5"
+                alt="ETES Logo"
+              />
+              <img
+                src="../assets/Logo-removebg.png"
+                class="h-12"
+                alt="ETES Logo"
+              />
+            </div>
             <span class="self-center text-white text-2xl font-semibold whitespace-nowrap"
               >ETES-2024</span
             >
