--- a/html/homepage.html
+++ b/html/homepage.html
@@ -187,7 +187,7 @@
             class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-lg px-5 py-2.5 text-center mt-0 mb-5 disabled"
             disabled
           >
-            March 15-17, 2024
+            Postponed
           </button>
         </div>
       </div>
@@ -350,7 +350,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >15-17 March 2024</time
+              >Postponed</time
             >
             <h3 class="text-lg font-semibold">Conference</h3>
           </li>
