--- a/html/committee.html
+++ b/html/committee.html
@@ -183,7 +183,7 @@
             class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-lg px-5 py-2.5 text-center mt-0 mb-5 disabled"
             disabled
           >
-            Postponed
+            Sept. 27-29, 2024
           </button>
         </div>
       </div>
@@ -227,13 +227,13 @@
               </h5>
             </a>
             <a class="flex justify-center items-center my-5">
-              <img class="rounded-full h-[30vh]" src="/assets/JK.jpg" alt="" />
+              <img class="rounded-full h-[30vh]" src="/assets/SM.jpeg" alt="" />
             </a>
             <p class="mb-3 font-semibold text-gray-700 flex justify-center">
-              Prof. J. K. Pattanayak
+              Prof. Sukumar Mishra
             </p>
             <p class="mb-3 font-normal text-gray-700 flex justify-center">
-              Director (Officiating), IIT(ISM) Dhanbad
+              Director, IIT(ISM) Dhanbad
             </p>
           </div>
         </div>
@@ -1513,6 +1513,86 @@
             NCPOR, Goa
           </h1>
         </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Dr. Sivaji Dasgupta
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            Principal Consultant, Prospect Rotunda Inc. Houston, Texas, United States
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Prof. G.M. Bhat
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            Dept. of Geology, University of Jammu, India
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Prof. S.K. Satheesh
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            IISc, Bangalore
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Prof. S. Dasgupta
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            IISER, Kolkata
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Dr. Niloy Khare
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            MoES, GOI
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Mr. Manish Kumar Sinha
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            Sr. Vice President - Corporate HR, Prism Johnson Ltd.
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Ms. Sushma Rawat
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            Dir. Exploration, ONGC, New Delhi & President AEG
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Mr. CC Babu
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            Former GM, EIL, & Joint Secretary, AEG
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Dr. B. Narashimha Rao
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            Secretary, AEG
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-base flex justify-center items-center">
+            Mr. S. Chandrasekhar
+          </h1>
+          <h1 class="font-normal text-sm flex justify-center items-center">
+            Vice-President, AEG
+          </h1>
+        </div>
       </div>
     </div>
     <footer class="bg-lime-500">
@@ -1545,7 +1625,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    etes2024@iitism.ac.in
+                  agp.etes2024@gmail.com
                   </p>
                 </li>
                 <li class="relative flex justify-center">
