--- a/html/iitism.html
+++ b/html/iitism.html
@@ -382,7 +382,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    etes2024@iitism.ac.in
+                  agp.etes2024@gmail.com
                   </p>
                 </li>
                 <li class="relative flex justify-start">
