--- a/html/sponsor.html
+++ b/html/sponsor.html
@@ -182,7 +182,7 @@
             class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-lg px-5 py-2.5 text-center mt-0 mb-5 disabled"
             disabled
           >
-          Postponed
+          Sept. 27-29, 2024
           </button>
         </div>
       </div>
@@ -321,7 +321,7 @@
                     <p
                       class="hover:underline ml-5 text-white font-normal text-sm"
                     >
-                    etes2024@iitism.ac.in
+                    agp.etes2024@gmail.com
                     </p>
                   </li>
                   <li class="relative flex justify-start">
