--- a/html/abstract.html
+++ b/html/abstract.html
@@ -183,7 +183,7 @@
             class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-lg px-5 py-2.5 text-center mt-0 mb-5 disabled"
             disabled
           >
-            Postponed
+            Sept. 27-29, 2024
           </button>
         </div>
       </div>
@@ -195,7 +195,7 @@
       <p class="my-10 leading-6">
         You are cordially invited to contribute an abstract to the upcoming
         Emerging Trends in Earth Sciences(ETES)-2024 conference at the
-        Department of Geophysics, IIT ISM, Dhanbad, from March 15 to 17,
+        Department of Geophysics, IIT ISM, Dhanbad, from Sept. 27 to Sept. 29,
         2024.Kindly download the
         <a
           class="underline font-semibold"
@@ -228,7 +228,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >31 January 2024</time
+              >12 August 2024</time
             >
             <h3 class="text-lg font-semibold">
               Last date of abstract submission
@@ -239,7 +239,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >05 February 2024</time
+              >26 August 2024</time
             >
             <h3 class="text-lg font-semibold">
               Last date for early bird registration
@@ -250,7 +250,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >End of February 2024</time
+              >26 August 2024</time
             >
             <h3 class="text-lg font-semibold">Acceptance of abstract</h3>
           </li>
@@ -259,7 +259,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >08 March 2024</time
+              >16 September 2024</time
             >
             <h3 class="text-lg font-semibold">
               Last date of late registration
@@ -270,7 +270,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >Postponed</time
+              >27-29 September 2024</time
             >
             <h3 class="text-lg font-semibold">Conference</h3>
           </li>
