--- a/html/contact.html
+++ b/html/contact.html
@@ -183,7 +183,7 @@
             class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-lg px-5 py-2.5 text-center mt-0 mb-5 disabled"
             disabled
           >
-            Postponed
+            Sept. 27-29, 2024
           </button>
         </div>
       </div>
@@ -209,7 +209,7 @@
         Phone : +91-326-2235949 ; M: +91-9471191852
       </h1>
       <h1 class="text-3xl font-bold flex justify-center items-center my-5">
-        Email : etes2024@iitism.ac.in, agp@iitism.ac.in
+        Email : agp.etes2024@gmail.com, agp@iitism.ac.in
       </h1>
       <h1 class="text-2xl font-bold flex justify-center items-center mt-15">
         Treasurer - Dr. Partha Pratim Mandal
@@ -256,7 +256,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    etes2024@iitism.ac.in
+                  agp.etes2024@gmail.com
                   </p>
                 </li>
                 <li class="relative flex justify-center">
