--- a/html/fees.html
+++ b/html/fees.html
@@ -183,7 +183,7 @@
             class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-lg px-5 py-2.5 text-center mt-0 mb-5 disabled"
             disabled
           >
-            Postponed
+            Sept. 27-29, 2024
           </button>
         </div>
       </div>
@@ -210,11 +210,11 @@
               </th>
               <th scope="col" class="px-6 py-3">
                 Early Bird Rates (01 delegate)<br />
-                <span class="text-sm">(Till 5th February, 2024) </span>
+                <span class="text-sm">(Till 26th August, 2024) </span>
               </th>
               <th scope="col" class="px-6 py-3 bg-gray-50 text-[#6F8F72]">
                 Standard Rates (01 delegate)<br />
-                <span class="text-sm">(After 5th February, 2024) </span>
+                <span class="text-sm">(After 26th August, 2024) </span>
               </th>
               <th scope="col" class="px-6 py-3"></th>
             </tr>
@@ -354,7 +354,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    etes2024@iitism.ac.in
+                  agp.etes2024@gmail.com
                   </p>
                 </li>
                 <li class="relative flex justify-center">
