--- a/html/homepage.html
+++ b/html/homepage.html
@@ -187,7 +187,7 @@
             class="text-gray-900 bg-gradient-to-r from-lime-200 via-lime-400 to-lime-500 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 dark:focus:ring-lime-800 shadow-lg shadow-lime-500/50 font-medium rounded-lg text-lg px-5 py-2.5 text-center mt-0 mb-5 disabled"
             disabled
           >
-            Postponed
+            Sept. 27-29, 2024
           </button>
         </div>
       </div>
@@ -308,7 +308,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >31 January 2024</time
+              >12 August 2024</time
             >
             <h3 class="text-lg font-semibold">
               Last date of abstract submission
@@ -319,7 +319,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >05 February 2024</time
+              >26 August 2024</time
             >
             <h3 class="text-lg font-semibold">
               Last date for early bird registration
@@ -330,7 +330,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >End of February 2024</time
+              >26 August 2024</time
             >
             <h3 class="text-lg font-semibold">Acceptance of abstract</h3>
           </li>
@@ -339,7 +339,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >08 March 2024</time
+              >16 September 2024</time
             >
             <h3 class="text-lg font-semibold">
               Last date of late registration
@@ -350,7 +350,7 @@
               class="absolute w-3 h-3 bg-gray-200 rounded-full mt-1.5 -start-1.5 border border-white"
             ></div>
             <time class="mb-1 text-sm font-normal leading-none text-gray-500"
-              >Postponed</time
+              >27-29 September 2024</time
             >
             <h3 class="text-lg font-semibold">Conference</h3>
           </li>
@@ -388,7 +388,7 @@
                   <p
                     class="hover:underline ml-5 text-white font-normal text-sm"
                   >
-                    etes2024@iitism.ac.in
+                  agp.etes2024@gmail.com
                   </p>
                 </li>
                 <li class="relative flex justify-center">
