chore(committee): updated committee

--- a/html/committee.html
+++ b/html/committee.html
@@ -401,64 +401,6 @@
             </p>
           </div>
         </div>
-        <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-          <a href="#">
-            <img
-              class="rounded-t-lg"
-              src="/docs/images/blog/image-1.jpg"
-              alt=""
-            />
-          </a>
-          <div class="p-5">
-            <a href="#">
-              <h5
-                class="mb-2 text-2xl font-semibold flex justify-center tracking-tight text-gray-900"
-              >
-                Member
-              </h5>
-            </a>
-            <a class="flex justify-center items-center my-5">
-              <img
-                class="rounded-full h-[30vh]"
-                src="/assets/akrana.jpeg"
-                alt=""
-              />
-            </a>
-            <p
-              class="mb-3 font-semibold flex justify-center flex justify-center text-gray-700"
-            >
-              Shri Amit Kumar Rana
-            </p>
-          </div>
-        </div>
-        <div class="max-w-sm bg-white border border-gray-200 rounded-lg shadow">
-          <a href="#">
-            <img
-              class="rounded-t-lg"
-              src="/docs/images/blog/image-1.jpg"
-              alt=""
-            />
-          </a>
-          <div class="p-5">
-            <a href="#">
-              <h5
-                class="mb-2 text-2xl font-semibold flex justify-center tracking-tight text-gray-900"
-              >
-                Member
-              </h5>
-            </a>
-            <a class="flex justify-center items-center my-5">
-              <img
-                class="rounded-full h-[30vh]"
-                src="/assets/hansraj.jpg"
-                alt=""
-              />
-            </a>
-            <p class="mb-3 font-semibold flex justify-center text-gray-700">
-              Shri Hansraj Kumar
-            </p>
-          </div>
-        </div>
       </div>
       <div class="my-20 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
         <h1
@@ -488,6 +430,14 @@
           </h1>
           <h1 class="font-normal text-base flex justify-center items-center">
             Dean (SW), IIT (ISM) Dhanbad
+          </h1>
+        </div>
+        <div class="items center">
+          <h1 class="font-semibold text-lg flex justify-center items-center">
+            Prof. M. K. Singh
+          </h1>
+          <h1 class="font-normal text-base flex justify-center items-center">
+            Dean (Academic), IIT (ISM) Dhanbad
           </h1>
         </div>
         <div class="items center">
@@ -522,14 +472,14 @@
             Dean (CC), IIT (ISM) Dhanbad
           </h1>
         </div>
-        <div class="items center">
+        <!-- <div class="items center">
           <h1 class="font-semibold text-lg flex justify-center items-center">
             Prof. A. Das
           </h1>
           <h1 class="font-normal text-base flex justify-center items-center">
             Dean (IIE), IIT (ISM) Dhanbad
           </h1>
-        </div>
+        </div> -->
         <div class="items center">
           <h1 class="font-semibold text-base flex justify-center items-center">
             Prof. M. K. Mukherjee
@@ -716,146 +666,10 @@
         </div>
         <div class="items center">
           <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. V.M.S.R Murthy
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. S. C. Bhaumik
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. Binay Dayal
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
             Prof. S. S. Rai
           </h1>
           <h1 class="font-normal text-sm flex justify-center items-center">
             ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. B. S. Chaudhury
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. P. S. Paul
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. Patitapaban Sahoo
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. Radhakanta Koner
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. G. V. K. Villuri
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            ME, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. Ajay Mondal
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. A. K. Pathak
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. Ashutosh Kumar
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. Chandan Guria
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. Tarakeshwar Kumar
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Prof. Vikas Mahto
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. Rajiv Upadhyay
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. Tarun K. Naiya
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
-          </h1>
-        </div>
-        <div class="items center">
-          <h1 class="font-semibold text-base flex justify-center items-center">
-            Dr. Ajay Suri
-          </h1>
-          <h1 class="font-normal text-sm flex justify-center items-center">
-            PE, IIT (ISM) Dhanbad
           </h1>
         </div>
         <div class="items center">
