--- a/html/fees.html
+++ b/html/fees.html
@@ -198,7 +198,7 @@
       <p class="my-10 leading-6">
         You are cordially invited to contribute an abstract to the upcoming
         Emerging Trends in Earth Sciences(ETES)-2024 conference at the
-        Department of Geophysics, IIT ISM, Dhanbad, from March 15 to 17, 2024.
+        Department of Geophysics, IIT ISM, Dhanbad, from Sept. 27 to 29, 2024.
       </p>
 
       <div class="relative overflow-x-auto shadow-xl sm:rounded-lg">
