--- a/html/homepage.html
+++ b/html/homepage.html
@@ -267,7 +267,7 @@
         It is our great pleasure to warmly welcome you to the National
         Conference on “Emerging trends in Earth Sciences: Geohazards and
         Resource management" scheduled to take place at IIT(ISM) Dhanbad from
-        March 15 to March 17, 2024. The conference aims to bring together a
+        Sept. 27 to Sept. 29, 2024. The conference aims to bring together a
         diverse community of educators, scientists, researchers, engineers,
         industrial delegates, and policymakers who are dedicated to forging a
         world where scientific discoveries translate into practical solutions.
