--- a/html/register.html
+++ b/html/register.html
@@ -222,7 +222,7 @@
       </p>
       <p class="flex justify-center">
         <a
-          href="https://docs.google.com/forms/d/e/1FAIpQLSfpHZWCSP5WTZRkc2d6w8ErIda2P9lrbbO7sMsoM5BAZY1g-w/viewform?usp=pp_url"
+          href="https://forms.office.com/r/wi9R4r4S94"
           target="_blank"
           type="button"
           class="w-[20vw] bg-gradient-to-r from-lime-300 via-lime-500 to-lime-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-lime-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center text-white me-2 mb-2"
