--- a/html/fees.html
+++ b/html/fees.html
@@ -286,6 +286,7 @@
                 class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap bg-gray-50"
               >
                 Student
+                <p class="text-gray-600 text-sm font-light">* Accommodation and train travel will be provided</p>
               </th>
               <td class="px-6 py-4">1500/-</td>
               <td class="px-6 py-4 bg-gray-50">2000/-</td>
